--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -15,7 +15,8 @@
         "doc",
         "ideas",
         "maintenance",
-        "translation"
+        "translation",
+        "bug"
       ]
     },
     {
@@ -44,7 +45,7 @@
       "profile": "https://github.com/PolliSoft",
       "contributions": [
         "bug",
-        "test"
+        "ideas"
       ]
     },
     {
@@ -54,7 +55,7 @@
       "profile": "https://github.com/macardi",
       "contributions": [
         "translation",
-        "test"
+        "ideas"
       ]
     },
     {
@@ -64,7 +65,7 @@
       "profile": "https://github.com/jhdgghost",
       "contributions": [
         "translation",
-        "test"
+        "ideas"
       ]
     },
     {
@@ -74,7 +75,6 @@
       "profile": "https://github.com/jumakki",
       "contributions": [
         "translation",
-        "test",
         "bug",
         "ideas"
       ]
@@ -85,7 +85,7 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/20192587?v=4",
       "profile": "https://github.com/sanangel",
       "contributions": [
-        "test"
+        "ideas"
       ]
     },
     {
@@ -94,7 +94,7 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/697599?v=4",
       "profile": "http://www.el-magnifico.org",
       "contributions": [
-        "test"
+        "ideas"
       ]
     },
     {
