--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -46,7 +46,8 @@
       "profile": "https://github.com/PolliSoft",
       "contributions": [
         "bug",
-        "ideas"
+        "ideas",
+        "userTesting"
       ]
     },
     {
@@ -56,7 +57,8 @@
       "profile": "https://github.com/macardi",
       "contributions": [
         "translation",
-        "ideas"
+        "ideas",
+        "userTesting"
       ]
     },
     {
@@ -66,7 +68,8 @@
       "profile": "https://github.com/jhdgghost",
       "contributions": [
         "translation",
-        "ideas"
+        "ideas",
+        "userTesting"
       ]
     },
     {
@@ -77,7 +80,8 @@
       "contributions": [
         "translation",
         "bug",
-        "ideas"
+        "ideas",
+        "userTesting"
       ]
     },
     {
@@ -86,7 +90,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/20192587?v=4",
       "profile": "https://github.com/sanangel",
       "contributions": [
-        "ideas"
+        "ideas",
+        "userTesting"
       ]
     },
     {
@@ -95,7 +100,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/697599?v=4",
       "profile": "http://www.el-magnifico.org",
       "contributions": [
-        "ideas"
+        "ideas",
+        "userTesting"
       ]
     },
     {
@@ -181,7 +187,8 @@
       "profile": "https://github.com/sile70000",
       "contributions": [
         "bug",
-        "ideas"
+        "ideas",
+        "userTesting"
       ]
     },
     {
