--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,5 @@ changelog.md export-ignore
 CODE_OF_CONDUCT.md export-ignore
 PULL_REQUEST_TEMPLATE.md export-ignore
 test.py export-ignore
+travis-buddy-failure-template.md export-ignore
+travis-buddy-success-template.md export-ignore
