--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: python
 python: 3.7
 install:
 - pip install kodi-addon-checker
+- pip install pycodestyle
+- pip install mypy
 before_script:
 - rm -R .github/ISSUE_TEMPLATE
 - rm .all-contributorsrc
@@ -16,10 +18,12 @@ before_script:
 - rm test.py
 - git config core.quotepath false
 script:
-- kodi-addon-checker --branch=leia
+- pycodestyle . --show-source --ignore=E501 --statistics --show-pep8 --count  # Check PEP8 coding standard, ignore long lines
+- mypy . --no-incremental --cache-dir=/dev/null  # Check for errors with mypy
+- kodi-addon-checker --branch=leia  # check with official Kodi add-on checker
 before_deploy:
   - pip install git+https://github.com/romanvm/kodi-addon-submitter.git
-  - submit-addon -z plugin.video.hbogoeu # Create an installable ZIP
+  - submit-addon -z plugin.video.hbogoeu  # Create an installable ZIP
   - export RELEASE_ZIP=$(ls *.zip)
 deploy:
   - provider: releases
