--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ PULL_REQUEST_TEMPLATE.md export-ignore
 test.py export-ignore
 travis-buddy-failure-template.md export-ignore
 travis-buddy-success-template.md export-ignore
+makefile export-ignore
