--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,10 @@ before_script:
 - rm PULL_REQUEST_TEMPLATE.md
 - rm changelog.md
 - rm test.py
+- rm makefile
 - git config core.quotepath false
 script:
-- flake8 . --ignore E501 --statistics --count  # Check basic errors, PEP8 coding standard, ignore long lines
+- flake8 . --ignore E501,N801,N802,N803,N806 --statistics --count  # Check basic errors, PEP8 coding standard, ignore long lines
 - mypy . --no-incremental --cache-dir=/dev/null  # Check for errors with mypy
 - kodi-addon-checker --branch=leia  # check with official Kodi add-on checker
 before_deploy:
