--- a/.travis.yml
+++ b/.travis.yml
@@ -41,18 +41,16 @@ deploy:
       type: push
 # Prepare for the official Kodi repo
   - provider: script
-    script: submit-addon -r repo-plugins -b leia --pull-request plugin.video.hbogoeu
+    script: submit-addon -r repo-plugins -b leia --push-branch plugin.video.hbogoeu
     on:
       repo: arvvoid/plugin.video.hbogoeu
       branch: leia
-      tags: true
       type: push
   - provider: script
-    script: submit-addon -r repo-plugins -b matrix --pull-request plugin.video.hbogoeu
+    script: submit-addon -r repo-plugins -b matrix --push-branch plugin.video.hbogoeu
     on:
       repo: arvvoid/plugin.video.hbogoeu
       branch: matrix
-      tags: true
       type: push
 notifications:
   webhooks: https://www.travisbuddy.com/
