--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ dist: xenial
 language: python
 python: 3.7
 install:
+- sudo apt install -y libxml2-utils
 - pip install pycryptodomex
 - pip install kodi-addon-checker
 - pip install flake8
