--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 dist: xenial
 language: python
 python: 3.7
+before_install:
+  - sudo apt-get update
+  - sudo apt-get -y install libxml2-dev
 install:
-- sudo apt install -y libxml2-utils
 - pip install pycryptodomex
 - pip install kodi-addon-checker
 - pip install flake8
