Update language checks in Makefile and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ before_script:
 - git config core.quotepath false
 script:
 - make test
-- make test-language-sync
+- make -k test-language-sync
+- make test-language-maintained
 before_deploy:
   - pip install git+https://github.com/romanvm/kodi-addon-submitter.git
   - make zip
