Language files resync

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 - git config core.quotepath false
 script:
 - make test
-- make -k test-language-sync
+- make test-language-sync
 - make test-language-maintained
 before_deploy:
   - pip install git+https://github.com/romanvm/kodi-addon-submitter.git
