--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@ changelog.md export-ignore
 CODE_OF_CONDUCT.md export-ignore
 PULL_REQUEST_TEMPLATE.md export-ignore
 test.py export-ignore
+gen_operator_list.py export-ignore
 travis-buddy-failure-template.md export-ignore
 travis-buddy-success-template.md export-ignore
 Makefile export-ignore
