--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ CODE_OF_CONDUCT.md export-ignore
 PULL_REQUEST_TEMPLATE.md export-ignore
 test.py export-ignore
 gen_operator_list.py export-ignore
+operators.md export-ignore
 travis-buddy-failure-template.md export-ignore
 travis-buddy-success-template.md export-ignore
 Makefile export-ignore
