Test add-on auto release with GitHub Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,3 +57,21 @@ jobs:
     - name: Just report traslations status
       id: lang-status
       run: make test-language-maintained
+
+  # If build success and this is a tag make a release
+  release:
+    if: ${{ github.ref == 'master' }}
+    needs: build
+    steps:
+      - name: Make GitHub Release Zip for Leia and Matrix
+        id: release-multi
+        run: |
+          make zip
+          export RELEASE_ZIP_LEIA=$(ls ../*-leia.zip)
+          export RELEASE_ZIP_MATRIX=$(ls ../*-matrix.zip)
+      - name: Publish Release
+        id: publish-release
+        run: |
+          echo RELEASE_ZIP_LEIA
+          echo RELEASE_ZIP_MATRIX
+
