CI config updates for test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,12 +74,13 @@ jobs:
       - name: Make GitHub Release Zip for Leia and Matrix
         id: release-multi
         run: make zip
+      - name: Set env
+        run: |
+          echo ::set-env name=RELEASE_ZIP_LEIA::$(ls ../*-leia.zip)
+          echo ::set-env name=RELEASE_ZIP_MATRIX::$(ls ../*-matrix.zip)
       - name: Publish Release
         id: publish-release
         run: |
           echo $RELEASE_ZIP_LEIA
           echo $RELEASE_ZIP_MATRIX
-        env:
-          RELEASE_ZIP_LEIA: $(ls ../*-leia.zip)
-          RELEASE_ZIP_MATRIX: $(ls ../*-matrix.zip)
 
