CI config updates to make auto release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,7 @@ jobs:
 
   # If build success and this is a tag make a release
   release:
+    if: contains(github.ref, "v.")
     needs: build
 
     runs-on: ubuntu-latest
@@ -78,13 +79,39 @@ jobs:
         run: |
           echo ::set-env name=RELEASE_ZIP_LEIA::$(ls ../*-leia.zip)
           echo ::set-env name=RELEASE_ZIP_MATRIX::$(ls ../*-matrix.zip)
+          echo ::set-env name=RELEASE_ASSET_NAME_LEIA::$(cd ..;ls *-leia.zip)
+          echo ::set-env name=RELEASE_ASSET_NAME_MATRIX::$(cd ..;ls *-matrix.zip)
           echo ::set-env name=RELEASE_NAME::$(xmllint --xpath 'string(/addon/@version)' addon.xml)
           echo ::set-env name=RELEASE_CHANGES::$(xmllint --xpath 'string(//addon/extension/news)' addon.xml)
-      - name: Publish Release
-        id: publish-release
-        run: |
-          echo $RELEASE_ZIP_LEIA
-          echo $RELEASE_ZIP_MATRIX
-          echo $RELEASE_NAME
-          echo $RELEASE_CHANGES
+      - name: Create Github Release
+          id: create_release
+          uses: actions/create-release@v1.0.0
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            tag_name: ${{ github.ref }}
+            release_name: Release $RELEASE_NAME
+            body: $RELEASE_CHANGES
+            draft: false
+            prerelease: true
+      - name: Upload Addon zip Leia to github release
+          id: upload-release-asset
+          uses: actions/upload-release-asset@v1.0.1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: $RELEASE_ZIP_LEIA
+            asset_name: $RELEASE_ASSET_NAME_LEIA
+            asset_content_type: application/zip
+      - name: Upload Addon zip Matrix to github release
+          id: upload-release-asset
+          uses: actions/upload-release-asset@v1.0.1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: $RELEASE_ZIP_MATRIX
+            asset_name: $RELEASE_ASSET_NAME_MATRIX
+            asset_content_type: application/zip
 
