--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,11 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    name: Test
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -63,7 +65,7 @@ jobs:
 
   # If build success and this is a tag in format v.VERSION make a release
   release:
-    needs: build
+    needs: test
     if: startsWith(github.ref, 'refs/tags/v')
 
     runs-on: ubuntu-latest
