CI config update

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,8 +96,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release $RELEASE_NAME
-          body: $RELEASE_CHANGES
+          release_name: ${{ env.RELEASE_NAME }}
+          body: ${{ env.RELEASE_CHANGES }}
           draft: false
           prerelease: true
       - name: Upload Addon zip Leia to github release
@@ -107,8 +107,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: $RELEASE_ZIP_LEIA
-          asset_name: $RELEASE_ASSET_NAME_LEIA
+          asset_path: ${{ env.RELEASE_ZIP_LEIA }}
+          asset_name: ${{ env.RELEASE_ASSET_NAME_LEIA }}
           asset_content_type: application/zip
       - name: Upload Addon zip Matrix to github release
         id: upload-release-asset-matrix
@@ -117,6 +117,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: $RELEASE_ZIP_MATRIX
-          asset_name: $RELEASE_ASSET_NAME_MATRIX
+          asset_path: ${{ env.RELEASE_ZIP_MATRIX }}
+            asset_name: ${{ env.RELEASE_ASSET_NAME_MATRIX }}
           asset_content_type: application/zip
