--- a/.github/workflows/operators.yml
+++ b/.github/workflows/operators.yml
@@ -5,9 +5,8 @@ name: Update operator list
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches:
-    - master
+  schedule:
+  - cron: "0 4 * * 0"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
