--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,8 +64,8 @@ jobs:
 
   # If build success and this is a tag in format v.VERSION make a release
   release:
-    if: startsWith(github.ref, 'refs/tags/v')
     needs: test
+    if: startsWith(github.ref, 'refs/tags/')
 
     runs-on: ubuntu-latest
 
@@ -121,8 +121,8 @@ jobs:
 
   # if release is success send to the official Kodi add-on repository both Leia and Matrix
   kodi-addon-submitter:
-    if: startsWith(github.ref, 'refs/tags/v')
     needs: release
+    if: startsWith(github.ref, 'refs/tags/')
 
     runs-on: ubuntu-latest
     name: Kodi addon submitter
