--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,6 +1,19 @@
-# Add 'label1' to any changes within 'example' folder or any subfolders
-label1:
-  - example/**/*
+Repository Changes:
+  - ./*
+    
+Libraries Changes:
+  - libs/*
+    
+Core Changes:
+  - hbogolib/*
+    
+Eu regional handler changes:
+  - hbogolib/handlereu.py
+    
+Nordic/Spain regional handler changes:
+  - hbogolib/handlersp.py
+    
+GitHub Config Changes:
+  - .github/*
 
-# Add 'label2' to any file changes within 'example2' folder
-label2: example2/*
+Translation: resources/language/*
