--- a/.github/workflows/operators.yml
+++ b/.github/workflows/operators.yml
@@ -11,6 +11,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   update-op-list-wiki:
+    if: github.actor == 'arvvoid'
     runs-on: ubuntu-latest
 
     name: Update Wiki operator list
