--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,7 @@ jobs:
         sudo apt -y install gettext
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install kodi-addon-checker
         
     # Clean files not accepted by kodi add-on checker
     - name: Clean
@@ -61,7 +62,7 @@ jobs:
   # If build success and this is a tag in format v.VERSION make a release
   release:
     needs: test
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') && github.actor == 'arvvoid'
 
     runs-on: ubuntu-latest
 
@@ -118,7 +119,7 @@ jobs:
   # if release is success send to the official Kodi add-on repository both Leia and Matrix
   kodi-addon-submitter:
     needs: release
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') && github.actor == 'arvvoid'
 
     runs-on: ubuntu-latest
     name: Kodi addon submitter
