--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
   test:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latestž
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [2.7, 3.7, 3.8]
