--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
 
-  test:
+  test-py:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    name: Test
+    name: Test Py
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
