--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,7 +56,7 @@ jobs:
 
   # If build success and this is a tag in format v.VERSION make a release
   release:
-    needs: test
+    needs: test-before-release
     if: startsWith(github.ref, 'refs/tags/') && github.actor == 'arvvoid'
 
     runs-on: ubuntu-latest
