--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         python-version: 3.7
 
-    # Install requirments
+    # Install requirements
     - name: Install requirements
       run: |
         sudo apt update
@@ -53,7 +53,7 @@ jobs:
       with:
         python-version: 3.7
 
-    # Install requirments
+    # Install requirements
     - name: Install requirements
       run: |
         sudo apt update
@@ -90,7 +90,7 @@ jobs:
         with:
           python-version: 3.7
 
-      # Install requirments
+      # Install requirements
       - name: Install requirements
         run: |
           sudo apt update
@@ -123,7 +123,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Install requirments
+      # Install requirements
       - name: Install requirements
         run: |
           sudo apt update
