--- a/.github/workflows/operators.yml
+++ b/.github/workflows/operators.yml
@@ -1,14 +1,11 @@
-# This is a basic workflow to help you get started with Actions
+# Update automatically the operators list in wiki
 
 name: Update operator list
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   schedule:
   - cron: "0 4 * * 0"
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   update-op-list-wiki:
     if: github.actor == 'arvvoid'
