--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,7 @@ on:
 jobs:
 
   test-before-release:
+    if: startsWith(github.ref, 'refs/tags/') && github.actor == 'arvvoid'
     runs-on: ubuntu-latest
 
     name: Pre-release Tests
