--- a/.github/workflows/operators.yml
+++ b/.github/workflows/operators.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install requirements
       run: |
         python -m pip install --upgrade pip
-        yes | pip install requests
+        pip install requests
     - name: Get hGo Wiki
       run: git clone https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/arvvoid/plugin.video.hbogoeu.wiki.git ../hgowiki
     - name: Generate Operators list
