--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
     # Install requirements
     - name: Install requirements
       run: |
-        sudo apt update
-        sudo apt -y install libxml2-utils
+        sudo apt-get update
+        sudo apt-get -y install libxml2-utils
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
@@ -58,8 +58,8 @@ jobs:
     # Install requirements
     - name: Install requirements
       run: |
-        sudo apt update
-        sudo apt -y install libxml2-utils
+        sudo apt-get update
+        sudo apt-get -y install libxml2-utils
         python -m pip install --upgrade pip
         pip install kodi-addon-checker
 
@@ -97,8 +97,8 @@ jobs:
       # Install requirements
       - name: Install requirements
         run: |
-          sudo apt update
-          sudo apt -y install libxml2-utils
+          sudo apt-get update
+          sudo apt-get -y install libxml2-utils
           python -m pip install --upgrade pip
           pip install kodi-addon-checker
 
@@ -130,9 +130,9 @@ jobs:
       # Install requirements
       - name: Install requirements
         run: |
-          sudo apt update
-          sudo apt -y install libxml2-utils
-          sudo apt -y install gettext
+          sudo apt-get update
+          sudo apt-get -y install libxml2-utils
+          sudo apt-get -y install gettext
 
       # Language files sync test
       - name: Test if language files are in sync with POT
@@ -153,9 +153,9 @@ jobs:
       # Install requirements
       - name: Install requirements
         run: |
-          sudo apt update
-          sudo apt -y install libxml2-utils
-          sudo apt -y install gettext
+          sudo apt-get update
+          sudo apt-get -y install libxml2-utils
+          sudo apt-get -y install gettext
 
       # Language files translation status
       - name: Traslations status (JUST INFO)
