Update to install requirments for actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install libxml2-utils
         python -m pip install --upgrade pip
+        pip install wheel
         pip install -r requirements.txt
 
     - name: Basic sanity check
@@ -61,6 +62,7 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install libxml2-utils
         python -m pip install --upgrade pip
+        pip install wheel
         pip install kodi-addon-checker
 
     # Clean files not accepted by kodi add-on checker
@@ -100,6 +102,7 @@ jobs:
           sudo apt-get update
           sudo apt-get -y install libxml2-utils
           python -m pip install --upgrade pip
+          pip install wheel
           pip install kodi-addon-checker
 
       # Clean files not accepted by kodi add-on checker
