--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,12 +71,14 @@ jobs:
         run: make zip
       - name: Set env
         run: |
-          echo ::set-env name=RELEASE_ZIP_LEIA::$(ls ../*-leia.zip)
-          echo ::set-env name=RELEASE_ZIP_MATRIX::$(ls ../*-matrix.zip)
-          echo ::set-env name=RELEASE_ASSET_NAME_LEIA::$(cd ..;ls *-leia.zip)
-          echo ::set-env name=RELEASE_ASSET_NAME_MATRIX::$(cd ..;ls *-matrix.zip)
-          echo ::set-env name=RELEASE_NAME::$(xmllint --xpath 'string(/addon/@version)' addon.xml)
-          echo ::set-env name=RELEASE_CHANGES::$(xmllint --xpath 'string(//addon/extension/news)' addon.xml)
+          echo "RELEASE_ZIP_LEIA=$(ls ../*-leia.zip)" >> $GITHUB_ENV
+          echo "RELEASE_ZIP_MATRIX=$(ls ../*-matrix.zip)" >> $GITHUB_ENV
+          echo "RELEASE_ASSET_NAME_LEIA=$(cd ..;ls *-leia.zip)" >> $GITHUB_ENV
+          echo "RELEASE_ASSET_NAME_MATRIX=$(cd ..;ls *-matrix.zip)" >> $GITHUB_ENV
+          echo "RELEASE_NAME=$(xmllint --xpath 'string(/addon/@version)' addon.xml)" >> $GITHUB_ENV
+          echo 'RELEASE_CHANGES<<EOF' >> $GITHUB_ENV
+          echo $(xmllint --xpath 'string(//addon/extension/news)' addon.xml)" >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
       - name: Create Github Release
         id: create_release
         uses: actions/create-release@v1.0.0
@@ -84,10 +86,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: ${{ env.RELEASE_NAME }}
+          release_name: ${{ $RELEASE_NAME }}
           body: |
             Changes in this Release
-            ${{ env.RELEASE_CHANGES }}
+            ${{ $RELEASE_CHANGES }}
           draft: false
           prerelease: true
       - name: Upload Addon zip Leia to github release
@@ -97,8 +99,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.RELEASE_ZIP_LEIA }}
-          asset_name: ${{ env.RELEASE_ASSET_NAME_LEIA }}
+          asset_path: ${{ $RELEASE_ZIP_LEIA }}
+          asset_name: ${{ $RELEASE_ASSET_NAME_LEIA }}
           asset_content_type: application/zip
       - name: Upload Addon zip Matrix to github release
         id: upload-release-asset-matrix
@@ -107,15 +109,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.RELEASE_ZIP_MATRIX }}
-          asset_name: ${{ env.RELEASE_ASSET_NAME_MATRIX }}
+          asset_path: ${{ $RELEASE_ZIP_MATRIX }}
+          asset_name: ${{ $RELEASE_ASSET_NAME_MATRIX }}
           asset_content_type: application/zip
 
   # if release is success send to the official Kodi add-on repository
   # both Leia and Matrix
   kodi-addon-submitter:
     needs: release
-    if: startsWith(github.ref, 'refs/tags/') && github.actor == 'arvvoid'
+    if: startsWith(github.ref, 'refs/tags/') && github.actor == 'arvvoidtest'
 
     runs-on: ubuntu-latest
     name: Kodi addon submitter
