Fix relese in publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,7 +76,6 @@ jobs:
           echo "RELEASE_ASSET_NAME_LEIA=$(cd ..;ls *-leia.zip)" >> $GITHUB_ENV
           echo "RELEASE_ASSET_NAME_MATRIX=$(cd ..;ls *-matrix.zip)" >> $GITHUB_ENV
           echo "RELEASE_NAME=$(xmllint --xpath 'string(/addon/@version)' addon.xml)" >> $GITHUB_ENV
-          echo "RELEASE_CHANGES=$(xmllint --xpath 'string(//addon/extension/news)' addon.xml | tr '\r\n' ' ' | tr '\n' ' ' | sed 's/ -/<br>-/g')" >> $GITHUB_ENV
       - name: Create Github Release
         id: create_release
         uses: actions/create-release@v1.0.0
@@ -84,10 +83,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: $RELEASE_NAME
-          body: |
-            <b>Changes in this Release:</b><br>
-            $RELEASE_CHANGES
+          release_name: ${{ env.RELEASE_NAME }}
           draft: false
           prerelease: true
       - name: Upload Addon zip Leia to github release
@@ -97,8 +93,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: $RELEASE_ZIP_LEIA
-          asset_name: $RELEASE_ASSET_NAME_LEIA
+          asset_path: ${{ env.RELEASE_ZIP_LEIA }}
+          asset_name: ${{ env.RELEASE_ASSET_NAME_LEIA }}
           asset_content_type: application/zip
       - name: Upload Addon zip Matrix to github release
         id: upload-release-asset-matrix
@@ -107,8 +103,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: $RELEASE_ZIP_MATRIX
-          asset_name: $RELEASE_ASSET_NAME_MATRIX
+          asset_path: ${{ env.RELEASE_ZIP_MATRIX }}
+          asset_name: ${{ env.RELEASE_ASSET_NAME_MATRIX }}
           asset_content_type: application/zip
 
   # if release is success send to the official Kodi add-on repository
