--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 _config.yml export-ignore
 changelog.md export-ignore
 CODE_OF_CONDUCT.md export-ignore
+SECURITY.md export-ignore
 test.py export-ignore
 gen_operator_list.py export-ignore
 operators.md export-ignore
