--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -7,6 +7,6 @@ ko_fi: arvvoid
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: arvvoid
-issuehunt: # Replace with a single IssueHunt username
+issuehunt: arvvoid
 otechie: # Replace with a single Otechie username
 custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
